<resources>
    <string name="app_name">Resistor Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="resistorColours">
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>
    <string-array name="multiplier">
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Gold</item>
        <item>Silver</item>
    </string-array>
    <string-array name="tolerance">
        <item>Brown</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>Gold</item>
        <item>Silver</item>
    </string-array>

    <string name="finalValue">test</string>
    <string name="band_1">Band 1</string>
    <string name="band_2">Band 2</string>
    <string name="band_3">Band 3</string>
    <string name="multiplier">Multiplier</string>
    <string name="tolerance">Tolerance</string>
    <string name="button">Calculate Resistance</string>

</resources>
