<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vabil.resistorcalculator.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Spinner
        android:id="@+id/band1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:entries="@array/resistorColours"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/band2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/band1"
        android:layout_marginTop="33dp"
        android:entries="@array/resistorColours"
        android:spinnerMode="dropdown" />


    <Spinner
        android:id="@+id/band3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/band2"
        android:layout_marginTop="36dp"
        android:entries="@array/resistorColours"
        android:spinnerMode="dropdown" />


    <Spinner
        android:id="@+id/multiplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/band3"
        android:layout_marginTop="39dp"
        android:entries="@array/multiplier"
        android:spinnerMode="dropdown" />


    <Spinner
        android:id="@+id/tolerance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/multiplier"
        android:layout_marginTop="31dp"
        android:entries="@array/tolerance"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/band3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/band2Text"
        android:layout_alignStart="@+id/band2Text"
        android:layout_alignTop="@+id/band3"
        android:text="@string/band_3" />

    <TextView
        android:id="@+id/band2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/band1Text"
        android:layout_alignTop="@+id/band2"
        android:text="@string/band_2"
        android:layout_alignLeft="@+id/band1Text" />

    <TextView
        android:id="@+id/multiplierText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/band3Text"
        android:layout_alignStart="@+id/band3Text"
        android:layout_alignTop="@+id/multiplier"
        android:text="@string/multiplier" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resistor_value"
        android:layout_toEndOf="@+id/band1"
        android:layout_toRightOf="@+id/band1"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tolerance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/button" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resistor_value"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/band3Text"
        android:layout_alignEnd="@+id/band3Text"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/toleranceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiplierText"
        android:layout_alignStart="@+id/multiplierText"
        android:layout_alignTop="@+id/tolerance"
        android:text="@string/tolerance" />

    <TextView
        android:id="@+id/band1Text"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/band1"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/band_1"
        android:layout_alignParentRight="true" />


</RelativeLayout>
